<resources>
    <string-array name="game_modes">
        <item>none</item>
        <item>tap_pve</item>
        <item>tap_pvp</item>
        <item>tap_pvp_online</item>
        <item>type_pve</item>
        <item>type_pvp_online</item>
    </string-array>

    <string-array name="game_languages">
        <item>eng</item>
        <item>heb</item>
    </string-array>

    <string-array name="connection_mode">
        <item>wifi</item>
        <item>bluetooth</item>
    </string-array>

    <string name="app_name">Taps</string>
    <string name="HomeActivity_textView_head">Taps</string>
    <string name="HomeActivity_textView_tappingHead">Tapping</string>
    <string name="HomeActivity_textView_typingHead">Typing</string>
    <string name="HomeActivity_textView_highScore_title">High Scores</string>
    <string name="HomeActivity_textView_high_tap_title">taps</string>
    <string name="HomeActivity_textView_high_type_title">typing</string>
    <string name="HomeActivity_button_tap_pve">Tap PvE</string>
    <string name="HomeActivity_button_tap_pvp">Tap PvP</string>
    <string name="HomeActivity_button_tap_pvp_online">Tap PvP Online</string>
    <string name="HomeActivity_button_type_pve">Type PvE</string>
    <string name="HomeActivity_button_type_pvp_online">Type PvP Online</string>
    <string name="HomeActivity_button_records">Records</string>
    <string name="HomeActivity_button_tap">Tap</string>
    <string name="HomeActivity_button_type">Type</string>

    <string name="new_high_score">New High Score!!!</string>

    <string name="score">Your Score:</string>
    <string name="up_layout_win">Blue</string>
    <string name="bottom_layout_win">Green</string>
    <string name="tap_pvp_winner_msg">Wins</string>
    <string name="words_per_min">Words Per Minute:</string>

    <string name="Bluetooth_button_scan">scan for devices</string>

    <string name="textView_go">GO</string>
    <string name="before_exit">click again to exit</string>

    <string name="sharedPreferences">com.android.ronoam.taps</string>


    <string name="connect">Connect</string>
    <string name="discover">Discover</string>
    <string name="register">Register</string>
    <string name="send">Send</string>

    <string-array name="network_statuses">
        <item>Uninitialized</item>
        <item>Discoverable on network</item>
        <item>Register Failed, connect to wifi</item>
        <item>Scanning for opponents</item>
        <item>Discovery Failed</item>
        <item>Discovery Found Opponent</item>
        <item>Discovery Lost Opponent</item>
        <item>Resolved Opponent</item>
        <item>Resolved Failed</item>
    </string-array>

    <string-array name="network_statuses1">
        <item>Registered Succeeded</item>
        <item>Registered Failed</item>
        <item>Discovery Started</item>
        <item>Discovery Start Failed</item>
        <item>Discovery Service Found</item>
        <item>Discovery Service Lost</item>
        <item>Resolved Service</item>
        <item>Resolved Failed</item>
    </string-array>

    <string-array name="manual_line1_erase">
        <item>3 correct words in a row = erasing opponent keys</item>
        <item>3 מילים נכונות ברצף = להעלים ליריב אותיות</item>
    </string-array>

    <string-array name="manual_line2_mix">
        <item>18 correct char in a row = mix opponent keyboard</item>
        <item>18 תווים נכונים ברצף = לערבב ליריב את האותיות</item>
    </string-array>

    <string-array name="words_json_files">
        <item>words_eng.json</item>
        <item>words_heb.json</item>
    </string-array>

    <string-array name="default_keyboards">
        <item>en_qwerty</item>
        <item>heb_qwerty</item>
    </string-array>

    <string-array name="mixed_keyboards">
        <item>en_qwerty_mixed1</item>
        <item>heb_qwerty_mixed1</item>
    </string-array>

    <string-array name="erased_keyboards">
        <item>en_qwerty_erased1</item>
        <item>heb_qwerty_erased1</item>
    </string-array>


    <!--  BluetoothChat -->
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Game.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="scan_finished">Scan finished</string>
    <string name="select_device">Hold to connect </string>
    <string name="listen">Waiting for opponent</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="title_available_devices">Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- ChooseConnectionFragment -->
    <string name="bluetooth_info">only between android bluetooth devices</string>
    <string name="wifi_info">must be on same wifi network</string>
    <string name="select_info">hold to select</string>

</resources>