<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/textView_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/HomeActivity_textView_head"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_tap_pve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="tapPveClick"
        android:text="@string/HomeActivity_button_tap_pve"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/button_tap_pvp"
        app:layout_constraintEnd_toStartOf="@+id/button_tap_pvp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_tap_pvp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="tapPvpClick"
        android:text="@string/HomeActivity_button_tap_pvp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/button_tap_pvp_online"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_tap_pve"
        app:layout_constraintTop_toBottomOf="@+id/button_tap" />

    <Button
        android:id="@+id/button_tap_pvp_online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="tapPvpOnlineClick"
        android:text="@string/HomeActivity_button_tap_pvp_online"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/button_tap_pvp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_tap_pvp" />

    <Button
        android:id="@+id/button_type_pve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="typePveClick"
        android:text="@string/HomeActivity_button_type_pve"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/button_type_pvp_online"
        app:layout_constraintEnd_toStartOf="@+id/button_type_pvp_online"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_type_pvp_online"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="typePvpOnlineClick"
        android:text="@string/HomeActivity_button_type_pvp_online"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_type_pve"
        app:layout_constraintTop_toBottomOf="@+id/button_type" />

    <Button
        android:id="@+id/button_records"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="recordsClick"
        android:text="@string/HomeActivity_button_records"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_winner_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_head" />

    <Button
        android:id="@+id/button_tap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:onClick="tapClick"
        android:text="@string/HomeActivity_button_tap"
        app:layout_constraintEnd_toStartOf="@+id/button_type"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_winner_score" />

    <Button
        android:id="@+id/button_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:onClick="typeClick"
        android:text="@string/HomeActivity_button_type"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_tap"
        app:layout_constraintTop_toBottomOf="@+id/textView_winner_score" />

</android.support.constraint.ConstraintLayout>